    - powerful_count(n[,k])           count of k-powerful numbers <= n
    - nth_powerful(n[,k])             the nth k-powerful number (default k=2)
    - is_powerfree(n[,k])             is n a k-powerfree number (default k=2)
    - powerfree_count(n[,k])          count of k-powerfree numbers <= n
    - powerfree_sum(n[,k])            sum of k-powerfree numbers <= n
    - perfect_power_count(n)          count of perfect powers <= n
    - prime_power_count(n)            count of prime powers <= n
    - smooth_count(n,k)               count of k-smooth numbers <= n
    - rough_count(n,k)                count of k-rough numbers <= n
    - is_sum_of_squares(n[,k])        can n be a sum of k squares (dflt k=2)
    - allsqrtmod(a,n)                 all square roots of a (mod n)
    - qnr(n)                          least quadratic non-residue
    - binomialmod(n,k,m)              fast binomial(n,k) mod m
    - submod(a, b, n)                 a - b mod n
    - rootmod(a, k, n)                modular k-th root
    - allrootmod(a,k,n)               all k-th roots of a (mod n)
    - vecequal(\@a, \@b)              compare two arrays for equality
    - tozeckendorf(n)                 Zeckendorf binary string from n
    - fromzeckendorf(str)             n from Zeckendorf binary string
    - lucasu(p,q,k)                   U(p,q)_k
    - lucasv(p,q,k)                   V(p,q)_k
    - lucasuv(p,q,k)                  U(p,q)_k, V(p,q)_k
    - lucasumod(p,q,k,n)              U(p,q)_k mod n
    - lucasvmod(p,q,k,n)              V(p,q)_k mod n
    - lucasuvmod(p,q,k,n)             U(p,q)_k, V(p,q)_k, q^k  all mod n

    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.
