@@ -2,7 +2,10 @@
 #define MPU_POWERFREE_H
 
 extern int is_powerfree(UV n, uint32_t k);
+
 extern UV powerfree_count(UV n, uint32_t k);
 extern UV powerfree_sum(UV n, uint32_t k);
+
+extern UV powerfree_part(UV n, uint32_t k);
 
 #endif
