@@ -93,7 +93,7 @@ sub mpu_public_regex {
       nth_ramanujan_prime_lower nth_ramanujan_prime_upper
       powerful_count nth_powerful
       perfect_power_count prime_power_count
-      is_powerfree powerfree_count powerfree_sum
+      is_powerfree powerfree_count powerfree_sum powerfree_part
       smooth_count rough_count
       sum_primes print_primes
       random_prime random_ndigit_prime
